--- a/OntoDocRel/.htaccess
+++ b/OntoDocRel/.htaccess
@@ -17,7 +17,7 @@ RewriteCond %{HTTP_ACCEPT} application/xhtml\+xml [OR]
 RewriteCond %{HTTP_ACCEPT} text/\* [OR]
 RewriteCond %{HTTP_ACCEPT} \*/\* [OR]
 RewriteCond %{HTTP_USER_AGENT} ^Mozilla/.*
-RewriteRule ^ontodocrel$ http://qamar.move.pk/CBSRelOnto_ Modelling Content Based Similarity Measures.html  [R=303,NE,L]
+RewriteRule ^$ http://qamar.move.pk/CBSRelOnto_ Modelling Content Based Similarity Measures.html  [R=303,NE,L]
 RewriteCond %{HTTP_ACCEPT} ^.*application/rdf\+xml.* 
-RewriteRule ^ontodocrel$  http://qamar.move.pk/CBSRelOnto_DoCO_Import.owl [R=303,NE,L]
+RewriteRule ^$  http://qamar.move.pk/CBSRelOnto_DoCO_Import.owl [R=303,NE,L]
 
